[package]
authors = ["dylanhart <dylan96hart@gmail.com>"]
edition = "2018"
name = "ulid"
version = "1.0.0"

license = "MIT"
readme = "README.md"

description = "a Universally Unique Lexicographically Sortable Identifier implementation"
keywords = ["ulid", "uuid", "sortable", "identifier"]

repository = "https://github.com/dylanhart/ulid-rs"

[features]
default = ["std"]
std = ["rand"]

[dependencies]
rand = {version = "0.8", optional = true}
rkyv = {default-features = false, optional = true, version = "0.7"}
serde = {version = "1.0", features = ["derive"], optional = true}
uuid = {version = "1.1", optional = true}

[dev-dependencies]
bencher = "0.1"

[[bench]]
harness = false
name = "bench"
path = "benches/bench.rs"

[workspace]
members = ["cli"]

[package.metadata.docs.rs]
all-features = true
